--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-
-<app-students></app-students>
+<div>
+<app-students [myinputMsg]="myInputMessage"(myOutput) ="getdata($event)"></app-students>
+</div>
