--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -10,7 +10,7 @@
 
         <form class="d-flex">
 
-          <button type="button" class="btn btn-primary"(click)="Addstudent()" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+          <button type="button" class="btn btn-primary"(click)="Addstudent(sArray)" data-bs-toggle="modal" data-bs-target="#staticBackdrop" >
             Add student
           </button>
         </form>
@@ -63,7 +63,8 @@
               id="exampleInputcourses">
           </div>
 
-          <button type="submit" class="btn btn-primary" value="submit">Submit</button>
+          <button *ngIf="!isUpdate" type="submit" class="btn btn-primary" value="submit">Submit</button>
+          <button *ngIf="isUpdate" type="update" class="btn btn-primary" value="update">Update</button>
         </form>
 
       </div>
@@ -109,3 +110,9 @@
     </tbody>
   </table>
 </div>
+<div>
+  <button (click)="senddata()">Send Data</button>
+  
+</div>
+  <!-- <button (click)="sendValues()"> Send Data </button> -->
+  
